--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 			<h3>I am Faiz Haidar Halwi, from the Informatics Engineering Department</h3>
 			<h3>Class of 2022 at Uin Syarif Hidaytullah Jakarta</h3>
 			<br><br><br><br><br>
-			<h2 style="position: absolute;"><a href="Biography.html">NEXT ></a></h2>
+
+			
+			<h2><a href="Biography.html">NEXT ></a></h2>
 		</center>
 
 		<div class="background">
@@ -38,7 +40,6 @@
 			<li><a href="Profile.html">Home</a></li>
 			<h3>Welcome To My Profile</h3>
 		<br>
-			<hr>
 	</div>
 
 	<div class="up">
