--- a/Project.html
+++ b/Project.html
@@ -27,7 +27,7 @@
 			<li><a href="Desain.html">Desain</a></li>
 			<li><a href="Project.html">Project</a></li>
 			<li><a href="Biography.html">Biography</a></li>
-			<li><a href="Profile.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<h3>Welcome To My Profile</h3>
 	</div>
 
