--- a/Desain.html
+++ b/Desain.html
@@ -78,7 +78,7 @@ FROM FIGMA
 	</div>
 
 	<div class="next">
-		<h2 style="position: absolute;"><a href="Profile.html">To Home ></a></h2>
+		<h2 style="position: absolute;"><a href="index.html">To Home ></a></h2>
 	</div>
 
 </body>
