--- a/Biography.html
+++ b/Biography.html
@@ -57,7 +57,7 @@
 
 
 	<div class="return">
-		<h2 style="position: absolute;"><a href="Profile.html">< RETURN</a></h2>
+		<h2 style="position: absolute;"><a href="index.html">< RETURN</a></h2>
 	</div>
 
 	<div class="next">
